--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Description" content="Are you a person that makes things for other people? Awesome—because this page is all about making things for people.">
-  <title>Solid Start</title>
+  <meta name="Description" content="Maak jij digitale dingen voor andere mensen? Top, want deze pagina gaat volledig over maken voor mensen.">
+  <title>Goed Begin</title>
   <style type="text/css">*{box-sizing:border-box}body{background-color:#eee;color:#2d2d35;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-size:1.25rem;line-height:1.7;text-rendering:optimizeLegibility}main{max-width:70ch;padding:1rem}kbd{background-color:#2d2d35;color:#eee;padding:0.1rem 0.2rem}</style>
-  <link rel="canonical" href="https://www.solidstart.info/" />
+  <link rel="canonical" href="https://www.goedbegin.info/" />
   <script type="text/javascript">
     var _paq = window._paq || [];
     /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-    _paq.push(["setDoNotTrack", true]);
-    _paq.push(["disableCookies"]);
     _paq.push(['trackPageView']);
     _paq.push(['enableLinkTracking']);
     (function() {
       var u="//stats.erikkroes.nl/";
       _paq.push(['setTrackerUrl', u+'matomo.php']);
-      _paq.push(['setSiteId', '2']);
+      _paq.push(['setSiteId', '4']);
       var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
       g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
     })();
